<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MortarSettingsActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/mortarPositionLongitudeTextViev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mortar_position_longitude" />

        <EditText
            android:id="@+id/editTextMortarPositionLongitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/mortar_position_long" />

        <TextView
            android:id="@+id/textViewMortarPositionLatitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mortar_position_latitude" />

        <EditText
            android:id="@+id/editTextMortarPositionLatitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/mortar_position_latitude" />

        <TextView
            android:id="@+id/textViewMortarPositionAltitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mortar_position_altitiude" />

        <EditText
            android:id="@+id/editTextMortarPositionAltitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/mortar_position_altitude" />

        <Button
            android:id="@+id/buttonMortPosSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Save" />

        <Button
            android:id="@+id/buttonMortPosRet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Return" />
    </LinearLayout>
</LinearLayout>