<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:text="@string/tap_on_camera_to_choose_profile_picture" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="109dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/editTextDisplayName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name" />

    <TextView
        android:id="@+id/textViewVerified"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:text="@string/save"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/logOutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_out" />

    <Button
        android:id="@+id/goToMapButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_map" />

    <Button
        android:id="@+id/buttonMortarPositionSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mortar_position_settings" />

</LinearLayout>