<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PlayerUseerProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="410dp"
            android:layout_height="81dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/playerName" />

        <TextView
            android:id="@+id/playerVerificationInformationTextView"
            android:layout_width="414dp"
            android:layout_height="41dp"
            android:layout_marginTop="7dp"
            android:text="@string/profile_not_weryfikated" />

        <TextView
            android:id="@+id/informationTextViev"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/jescze_yjesz" />

        <Button
            android:id="@+id/returnButton"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:text="@string/return_to_login_page" />

        <Button
            android:id="@+id/pleyerSaveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="418dp" />

    </LinearLayout>

</LinearLayout>