<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="177dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/RegisterTextView"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:text="@string/register_panel" />

    <EditText
        android:id="@+id/registerEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/registerPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/registerYourAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_your_account" />

    <Button
        android:id="@+id/logInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_log_in_panel" />
</LinearLayout>